Mise à jour du site

--- a/style.css
+++ b/style.css
@@ -8,24 +8,36 @@ body {
     font-size: 2vh;
 }
 
-nav {
+#otherHeader {
     background-color: black;
-
 }
 
-ul {
+#navBarUl {
     margin: 0;
     list-style-type: none;
 }
 
-li {
+.navBarLi {
     display: inline-block;
     padding: 1vw;
+}
+
+nav {
+    width: 80%;
+    margin: 0 auto;
 }
 
 .navBarItems {
     color: white;
     text-decoration: none;
+}
+
+#homeBody {
+    background: url("background.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: white;
 }
 
 #mainHome {
