--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ a {
     padding-top: 1.5vh;
 }
 
+.centerButton {
+    text-align: center;
+}
+
 span {
     color: white;
     background-color: dimgray;
